--- a/packages/components/src/stories/assets/css/theme.css
+++ b/packages/components/src/stories/assets/css/theme.css
@@ -394,6 +394,9 @@ li.sbdocs.sbdocs-li {
   text-decoration: none;
 }
 
+.docs-story .bal-nav {
+  position: relative;
+}
 .docs-story .bal-nav__meta nav,
 .docs-story .bal-nav__main {
   width: 100%;
